# authk

./: .pre-commit-config.yaml  LICENSE  README.md  TODO.md  config.py  makefile  pyproject.toml  server.py  sqlite.db
common/: persistence.py
helpers/: setup.py
migrations/models/: 0_20230921172457_init.py  1_20230921172845_update.py
models/: endpoint.py  entity.py  operation.py
